@@ -17,6 +17,10 @@ not yet  BJH  Release 11.11.00
               pnmtofiasco: fix crash when image is really small.  Always
                broken (programs were new in Netpbm 9.6, July 2000).
               
+              pnmtofiasco: fix bug: uses one tile regardless of
+              --tiling-exponent.  Always broken (programs were new in Netpbm
+              9.6, July 2000).
+
 25.03.28 BJH  Release 11.10.00
 
               pamdice: Add -listfile, -indexfile, -numberwidth, -dry-run .
